# project-oop-1-sem-2025

./: .gitignore  BenchmarkTool_8h_source.html  CMakeLists.txt  ChatManager_8h_source.html  ChatPageWidget_8h_source.html  ChatStructures_8h_source.html  ChatWindow_8h_source.html  ContactInfo.cpp  ContactInfo.h  ContactInfo_8h_source.html  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager_8h_source.html  Doxyfile  FakeDataManager_8h_source.html  LikesManager_8h_source.html  MatchEngine.cpp  MatchEngine.h  MatchEngine_8h_source.html  Preference.cpp  Preference_8h_source.html  README.md  StatsDialog_8h_source.html  TagManager_8h_source.html  UserLogger.cpp  UserLogger.h  UserLogger_8h_source.html  UserProfile.cpp  UserProfile.h  UserProfile_8h_source.html  adminpagewidget_8h_source.html  annotated.html  annotated_dup.js  classAdminPageWidget-members.html  classAdminPageWidget.html  classAdminPageWidget.js  classAdminPageWidget__coll__graph.map  classAdminPageWidget__coll__graph.md5  classAdminPageWidget__inherit__graph.map  classAdminPageWidget__inherit__graph.md5  (+200 more)
.github/workflows/: docs.yml
benchmarks/: db_benchmarks.cpp  match_benchmarks.cpp
core/: FakeDataManager.cpp  FakeDataManager.h  MatchEngine.cpp  MatchEngine.h  UserLogger.h
docs/: _contact_info_8h_source.html  _database_manager_8h_source.html  _match_engine_8h_source.html  _preference_8h_source.html  _user_logger_8h_source.html  _user_profile_8h_source.html  annotated.html  annotated_dup.js  class_contact_info-members.html  class_contact_info.html  class_contact_info.js  class_database_manager-members.html  class_database_manager.html  class_database_manager.js  class_main_window-members.html  class_main_window.html  class_main_window__coll__graph.map  class_main_window__coll__graph.md5  class_match_engine-members.html  class_match_engine.html  class_preference-members.html  class_preference.html  class_preference.js  class_profile_card-members.html  class_profile_card.html  class_profile_card__inherit__graph.map  class_profile_card__inherit__graph.md5  class_user_logger-members.html  class_user_logger.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  (+26 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
gui/: StatsDialog.cpp  StatsDialog.h  adminpagewidget.cpp  adminpagewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matchespagewidget.cpp  matchespagewidget.h  matchespagewidget.ui  profilecard.cpp  profilecard.h  profilepagewidget.cpp  profilepagewidget.h  profilepagewidget.ui  searchpagewidget.cpp  searchpagewidget.h  searchpagewidget.ui  settingspagewidget.cpp  settingspagewidget.h  settingspagewidget.ui  welcomepagewidget.cpp  welcomepagewidget.h
i18n/: app_en.ts  app_ua.ts
models/: ChatManager.cpp  ChatManager.h  ChatPageWidget.cpp  ChatPageWidget.h  ChatStructures.h  ChatWindow.cpp  ChatWindow.h  ContactInfo.cpp  ContactInfo.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager.h.autosave  LikesManager.cpp  LikesManager.h  Preference.cpp  Preference.h  TagManager.cpp  TagManager.h  UserProfile.cpp  UserProfile.h
resources/: dark_theme.qss  light_theme.qss  style.qss
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  (+29 more)
tests/: DatabaseManagerTests.cpp  benchmark_main.cpp  chat_preference_tests.cpp  core_models_tests.cpp  matchengine_tests.cpp  tests_main.cpp
translations/: app_en.ts  app_ua.ts
utils/: BenchmarkTool.h  UserLogger.cpp  UserLogger.h
